# spark_notebook

./: .env.sample  Dockerfile  Dockerfile.polaris-local  README.md  codecov.yml  docker-compose.yaml  ruff.toml  test_container_notebook_utils.py  test_fallback.py
.github/workflows/: lint.yml  publish_docker_image.yml  test.yml
configs/: grouped_s3_contents.py  jupyter_server_config.py  spark-defaults.conf.template
configs/extensions/: favorites.jupyterlab-settings
configs/ipython_startup/: 00-notebookutils.py  01-credentials.py  01-minio-credentials.py  02-clients.py  03-spark-connect-server.py  04-activity-logging.py  04-setup-spark-utils.py  05-token-sync.py  05_notebook_utils.py  06-kbase-user-profile.py  README.md
configs/jupyter_docker_stacks_hooks/: 11-setup_env.sh
configs/skel/: .bash_profile
configs/trino/: access-control.properties  config.properties  resource-groups-README.md  resource-groups.json  worker-config.properties
configs/trino/catalog/: delta.properties
docs/: admin_user_management_guide.md  custom_packages_guide.md  data_sharing_guide.md  iceberg_migration_guide.md  minio_guide.md  requesting-tenant-access.md  tenant_sql_warehouse_guide.md  user_guide.md
notebook_utils/: README.md  pyproject.toml  run_tests.sh
notebook_utils/berdl_notebook_utils/: __init__.py  berdl_settings.py  cache.py  caches.py  clients.py  hive_metastore.py  hms_pool.py  kbase_token_cache.py  kbase_user.py  pyproject.toml  refresh.py  setup_spark_session.py  setup_trino_session.py  spark_utils.py
notebook_utils/berdl_notebook_utils/agent/: __init__.py  agent.py  mcp_tools.py  memory.py  prompts.py  settings.py  tools.py
notebook_utils/berdl_notebook_utils/governance/: __init__.py  _cache.py  operations.py
notebook_utils/berdl_notebook_utils/mcp/: __init__.py  client.py  operations.py
notebook_utils/berdl_notebook_utils/minio_governance/: __init__.py  _cache.py  client.py  exceptions.py  models.py  operations.py  tenant_management.py  utils.py
notebook_utils/berdl_notebook_utils/postgres/: __init__.py  connection.py  hive_metastore.py
notebook_utils/berdl_notebook_utils/spark/: __init__.py  _cache.py  cluster.py  cluster_monitor.py  connect_server.py  data_store.py  database.py  dataframe.py  metrics.py
notebook_utils/tests/: README.md  conftest.py  test_berdl_notebook_utils.py  test_berdl_settings.py  test_cache.py  test_caches.py  test_clients_extended.py  test_get_clients.py  test_get_spark_session.py  test_hive_metastore.py  test_kbase_token_cache.py  test_kbase_user.py  test_minio_governance_compat_shim.py  test_refresh.py  test_setup_trino_session.py  test_validate_environment.py
notebook_utils/tests/agent/: test_agent.py  test_mcp_tools.py  test_memory.py  test_prompts.py  test_settings.py  test_tools.py
notebook_utils/tests/governance/: __init__.py  test_operations.py  test_tenant_management.py
notebook_utils/tests/mcp/: test_client.py  test_operations.py
notebook_utils/tests/minio_governance/: __init__.py  test_operations.py  test_tenant_management.py
notebook_utils/tests/spark/: test_cluster.py  test_connect_server.py  test_data_store.py  test_database.py  test_database_extended.py  test_dataframe.py  test_metrics.py
notebooks/: test_trino.ipynb
opa/: data.json  trino.rego
scripts/: entrypoint.sh  init-mms-db.sh  init-polaris-db.sh  init-postgres-readonly.sh  migrate_delta_to_iceberg.py  patch_jupyter_ai.py  patch_s3contents.py  patch_s3contents_init.py
test_notebooks/: test_trino_e2e.ipynb
trino/etc/: access-control.properties  jvm.config  log.properties  rules.json
trino/etc/catalog/: delta.properties
