[project]
name = "berdl_notebook_utils"
version = "0.0.1"
description = "berdl_notebook_utils"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Core utilities ---
    "pydantic-settings>=2.0",
    "httpx>=0.24",

    # --- Spark ---
    "pyspark[connect]>=4.0",

    # --- Storage / Hive ---
    "minio>=7.0",
    "hmsclient>=0.1",

    # --- BERDL internal clients ---
    "cdm-task-service-client",
    "cdm-spark-manager-client",
    "minio-manager-service-client",
    "datalake-mcp-server-client",
]

[project.optional-dependencies]
# Jupyter notebook widgets & display (itables, sidecar, ipywidgets)
notebook = [
    "itables>=2.0",
    "ipywidgets>=8.0",
    "sidecar>=0.7",
    "pandas>=2.0",
]
# AI agent (LangChain + LLM providers)
agent = [
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
]
# Everything
all = [
    "berdl_notebook_utils[notebook,agent]",
]

[dependency-groups]
dev = [
    # Development tools
    "pytest==8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.2.0",
    "ruff==0.14.4",
]

[tool.ruff]

exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
markers = ["requires_spark: must be run in an environment where spark is available"]

[tool.coverage.run]
relative_files = true
source = ["berdl_notebook_utils"]

# environment settings for running tests
[tool.pytest_env]
USER = "fake_user"
KBASE_AUTH_TOKEN = "test-token-123"
CDM_TASK_SERVICE_URL = "http://localhost:8080"
MINIO_ENDPOINT_URL = "http://localhost:9000"
MINIO_ACCESS_KEY = "minioadmin"
MINIO_SECRET_KEY = "minioadmin"
MINIO_SECURE_FLAG = "false"
BERDL_POD_IP = "192.168.1.100"
SPARK_MASTER_URL = "spark://localhost:7077"
BERDL_HIVE_METASTORE_URI = "thrift://localhost:9083"
SPARK_CLUSTER_MANAGER_API_URL = "http://localhost:8000"
GOVERNANCE_API_URL = "http://localhost:8000"
DATALAKE_MCP_SERVER_URL = "http://localhost:8080"


[tool.uv.sources]
cdm-task-service-client = { git = "https://github.com/kbase/cdm-task-service-client", rev = "0.2.3" }
cdm-spark-manager-client = { git = "https://github.com/kbase/cdm-kube-spark-manager-client.git", rev = "0.0.1" }
minio-manager-service-client = { git = "https://github.com/BERDataLakehouse/minio_manager_service_client.git", rev = "v0.0.7" }
datalake-mcp-server-client = { git = "https://github.com/BERDataLakehouse/datalake-mcp-server-client.git", rev = "v0.0.6" }

[tool.ruff.lint.per-file-ignores]
"**/cdm_spark_cluster_manager_api_client/**/*.py" = ["E501"]
